--- a/ChitChatMac/ChitChatMac.csproj
+++ b/ChitChatMac/ChitChatMac.csproj
@@ -81,5 +81,9 @@
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\Screen Shot 2018-02-13 at 2.46.17 PM.png" />
+    <BundleResource Include="Resources\Screen Shot 2018-02-13 at 2.55.30 PM.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
 </Project>
